--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,7 +265,7 @@ form{
   overflow: auto;
 }
 .form-group{
-  border:2px solid yellow;
+  /* border:2px solid yellow; */
   margin-top: 2em;
   background-color:  #f2f2f2;
   float: left;
@@ -328,7 +328,7 @@ form h3{
  }
 /* (9)Footer Area */
  .footer{
-  border:2px solid green;
+  /* border:2px solid green; */
   background-image: url(../images/footer-img.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -347,7 +347,7 @@ form h3{
   margin-right: 1%;
 }
 .footer-widgets:nth-child(4){
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
   margin-right: 0;
 }
 .footer-widgets h3{
@@ -368,38 +368,38 @@ form h3{
   font-family: 'Raleway', sans-serif;
   text-shadow: 3px 3px 6px #312a26;  
 }
-.footer-form{
+.footer-form *{
+  /* border:2px solid blue; */
   width:auto;
 }
-.footer2{
-  background-color: #312a26;
-  padding-top: 30px;
-  padding-bottom: 2em;
+/* footer-social-widgets area */
+.footer-social {
+  color: #fff;
+  background-color: #19100F;
+  overflow: auto;
+  padding: 1em 7.5%;
 }
-.footer2-box{
-  width: 24.25%;
+.social-widgets{
   float:left;
-  margin-right: 1%;
-  background-image: url(../images/icon-fb.png);
-  background-image: url(../images/icon-ig.png);
-  background-image: url(../images/icon-tw.png);
-  background-repeat: no-repeat;
-  background-size: 30px;
-  background-position: 30px 10px;
+  text-align: center;
 }
-.footer2 h3{
-  border: 2px solid yellow;
+
+.social-widgets h3{
+  /* border: 2px solid yellow; */
   color: white;
   text-align: left;
   text-transform: uppercase;
   margin-bottom: 1em;
-  width: px;
+  margin-left: 140px;
+  margin-right: 250px;
+  width: 150px;
 }
-.footer2 img{
+.social-widgets a img{
+  /* border: 2px solid yellow; */
   width: 30px;
-  margin-top: 10px;
 }
-.footer2 p{
+.social-widgets p{
   color: white;
   font-family: 'Raleway', sans-serif;
+  margin-left: 250px;
 }
